required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Version 5.6.7 (SVN branch-5-6):
---------------------------

- add support for gml:Box for spatial filters (#3789)

- Fixed false computation of symbol size when used as a brush on line (#3760)

- Fixed SQL Spatial to be able to use UniqueIdentifier field as unique key (#3722)

- Fixed possible seg. fault when using "OGR:Label*" special attributes (#3667)

- Fixed bug with newlines around multipart boundaries in wcs multipart (#3672)

Version 5.6.6 (2011-01-17):
---------------------------

- SLD: Fix point symbolizer issue when color is not set (#3658)

- Fix WMS EXCEPTIONS parameter issue with fastcgi (#3525)

- Fixed missing time in msDrawMap logging (#3651)

- Fixed Internal error with Oracle Spatial multi point geometries (#3627)

- Fixed double free in shp2img.c (#3497)

- Fixed free(): invalid next size in mapfile.c (#3604)

- Fix for the memory corruption when mapping the string data type in the 
  Java bindings (3491)

- Correct wms 1.3.0 latlong bbox error (#2578)

- Fix ProperyIsLike not used efficiently with Oracle (#3557) 

- Fixed msOGRGetSymbolId according to the changes in gdal 1.8 (#3556)

- Fixed crash when drawing a map using UNIQUE fid in the layer data (#3271)

- Fixed Oracle Spatial Data gets corrupt (#3541)

- Fixed issue with multiple styles and binding (#3538)

- Fixed multiple include tags not supported in xml mapfiles (#3530)

- Ensure the class is not marked BeforeFieldInit causing memory corruption 
  with C#/CLR4 (#3438)

- Fixed MSSQL2008 driver returning invalid extent (#3498)

- Fix computation of shape bounds when the first line contains no points
  (#3119)(fixes #3383)
