@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Version 5.6.7 (SVN branch-5-6):
 ---------------------------
 
+- Fixed segmentation fault on invalid symbol (#3849)
+
 - add support for gml:Box for spatial filters (#3789)
 
 - Fixed false computation of symbol size when used as a brush on line (#3760)
